# tnds

./: .gitignore  .ruff.toml  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
hooks/: post_gen_project.py
src/custom_ds_cli/: cli.py
src/custom_ds_cli/template/: .ruff.toml  cookiecutter.json
src/custom_ds_cli/template/hooks/: post_gen_project.py
src/custom_ds_cli/template/{{cookiecutter.project_slug}}/: .gitignore  Makefile  manage.py  pyproject.toml
src/custom_ds_cli/template/{{cookiecutter.project_slug}}/src/: __init__.py
src/custom_ds_cli/template/{{cookiecutter.project_slug}}/src/data/: __init__.py  make_dataset.py
src/custom_ds_cli/template/{{cookiecutter.project_slug}}/src/features/: __init__.py  build_features.py
src/custom_ds_cli/template/{{cookiecutter.project_slug}}/src/models/: __init__.py  predict_model.py  train_model.py
src/custom_ds_cli/template/{{cookiecutter.project_slug}}/src/visualization/: __init__.py  visualize.py
src/custom_ds_cli/template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
src/tnds/: cli.py
src/tnds/template/{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
src/tnds/template/{{cookiecutter.project_slug}}/src/data/: make_dataset.py
src/tnds/template/{{cookiecutter.project_slug}}/src/features/: build_features.py
src/tnds/template/{{cookiecutter.project_slug}}/src/models/: __init__.py
src/tnds/template/{{cookiecutter.project_slug}}/src/visualization/: __init__.py
src/tnds/template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: serializers.py  wsgi.py
tests/: __init__.py  conftest.py  test_cli.py  test_template.py
