[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom-ds-cli"
version = "0.1.0"
description = "Custom Data Science Project Generator"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["data-science", "project-template", "cookiecutter", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "cookiecutter>=2.1.0",
    "rich>=10.0.0",  # For better CLI formatting
    "packaging>=23.0",  # For version parsing
    "questionary>=2.0.0",  # For interactive CLI prompts
]

[project.urls]
Homepage = "https://github.com/yourusername/custom-ds-cli"
Documentation = "https://github.com/yourusername/custom-ds-cli#readme"
Repository = "https://github.com/yourusername/custom-ds-cli.git"
Issues = "https://github.com/yourusername/custom-ds-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
tnds = "custom_ds_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/custom_ds_cli"]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
fix = true 