[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom-ds-cli"
version = "0.1.0"
description = "A CLI tool for generating standardized data science project templates"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "click>=8.0.0",
    "cookiecutter>=2.1.0",
    "packaging>=23.0",
    "questionary>=2.0.0",
    "rich>=10.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/yourusername/custom-ds-cli"
Documentation = "https://github.com/yourusername/custom-ds-cli#readme"
Repository = "https://github.com/yourusername/custom-ds-cli.git"
Issues = "https://github.com/yourusername/custom-ds-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.2.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
tnds = "custom_ds_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/custom_ds_cli"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "C4"]
ignore = []
exclude = ["src/custom_ds_cli/template/**"]

[tool.ruff.lint.per-file-ignores]
"src/custom_ds_cli/template/**" = ["N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto" 