[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tnds"
version = "0.1.0"
description = "Tardanoir's Data Science Project Generator"
authors = [
    {name = "Felipe Galo", email = "felipe.galo@gmail.com"},
]
dependencies = [
    "click>=8.0.0",
    "cookiecutter>=2.1.0",
    "packaging>=23.0",
    "questionary>=2.0.0",
    "rich>=10.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/tardanoir/tnds"
Documentation = "https://github.com/tardanoir/tnds#readme"
Repository = "https://github.com/tardanoir/tnds.git"
Issues = "https://github.com/tardanoir/tnds/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
tnds = "tnds.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tnds"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "C4"]
ignore = []
exclude = ["src/tnds/template/**"]

[tool.ruff.lint.per-file-ignores]
"src/tnds/template/**" = ["N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto" 