[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} - A data science project"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
license = {text = "MIT"}
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
# Base dependencies that are always included
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
# Django dependencies are added during project generation
django = [
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
]

[tool.ruff]
# Enable pycodestyle ('E'), pyflakes ('F'), isort ('I'), pyupgrade ('UP'), naming ('N'), bugbear ('B'), comprehensions ('C4')
select = ["E", "F", "I", "UP", "N", "B", "C4"]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Indent with spaces.
indent-style = "space"
# Line ending style
line-ending = "auto" 